# Iris

./: .env.example  .gitignore  .gitmodules  GEMINI.md  README.md  backup_pre_migration.sql  docker-compose.yml  index.html  start.bat  start.sh
.agent/rules/: pnpm.md  self-explanatory.md  workflow.md
backend/: Dockerfile  main.py  requirements.txt
backend/src/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_evolution.py  test_main.py  test_models.py  test_subscription.py
compose/: docker-compose.yml
compose/postgres/: init-db.sh
database/migrations/: 001_mailbox_refactor.sql
docker/postgres/: 02_init_metricas_modelos.sql  init-db.sh
documentation/: Arquitectura.md  Base de Datos.md  Bitacora.md  Contexto del Sistema.md  Flujo de Envio.md  Flujo de Suscripcion.md  README.md  development_log.md  project_overview.md
frontend/: .dockerignore  App.tsx  Dockerfile  astro.config.mjs  constants.ts  debug_db.js  fix_schema.js  package.json  pnpm-lock.yaml  types.ts  vitest.config.ts
n8n/flujos/: iris.json  (+1 more)
nginx/: nginx.conf
scripts/: backup.bat  backup.sh  restore.bat  restore.sh  safe-down.bat  safe-down.sh  start.bat  start.sh
src/backend/: main.py  pyproject.toml  requirements.txt
src/backend/app/: models.py  router.py  schemas.py  service.py
src/backend/app/api/: subjects.py  subscriptions.py
src/backend/app/core/: config.py
src/backend/app/db/: models.py  session.py
src/backend/app/models/: subscription.py
src/backend/app/services/: subscription_service.py
src/backend/tests/: test_subjects.py
(+71 files in other folders)
